--- a/files/index.html
+++ b/files/index.html
@@ -5,5 +5,12 @@
 	<body>
 		<h1>Hello World</h1>
 		<p>The paragraph</p>
+
+		<h4>Tasks</h4>
+		<ul>
+			<li>Buy apples</li>
+			<li>Feed dog</li>
+			<li>Make salad</li>
+		</ul>
 	</body>
 </html>
