Add tasks and form
add form styles and header

--- a/files/index.html
+++ b/files/index.html
@@ -5,6 +5,12 @@
 	<body>
 		<h1>Hello World</h1>
 		<p>The paragraph</p>
+		<h4>Tasks</h4>
+		<ul>
+			<li>Buy apples</li>
+			<li>Feed dog</li>
+			<li>Make salad</li>
+		</ul>
 
 		<h2>The user form</h2>
 		<form>
@@ -14,5 +20,6 @@
 			<input type="password"/><br/><br/>
 			<input type="submit" value="submit"/>
 		</form>
+
 	</body>
 </html>
