--- a/files/index.html
+++ b/files/index.html
@@ -5,5 +5,11 @@
 	<body>
 		<h1>Hello World</h1>
 		<p>The paragraph</p>
+		<form>
+			name:
+			<input type="text"/>
+			password:
+			<input type="password"/>
+		</form>
 	</body>
 </html>
