--- a/files/index.html
+++ b/files/index.html
@@ -9,9 +9,10 @@
 		<h2>The user form</h2>
 		<form>
 			name:
-			<input type="text"/>
+			<input type="text"/><br/>
 			password:
-			<input type="password"/>
+			<input type="password"/><br/><br/>
+			<input type="submit" value="submit"/>
 		</form>
 	</body>
 </html>
